--- a/rio_olympics_medalists.ipynb
+++ b/rio_olympics_medalists.ipynb
@@ -240,37 +240,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "id             0\n",
-       "name           0\n",
-       "nationality    0\n",
-       "sex            0\n",
-       "dob            0\n",
-       "height         0\n",
-       "weight         0\n",
-       "sport          0\n",
-       "gold           0\n",
-       "silver         0\n",
-       "bronze         0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.isnull().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [
@@ -321,30 +290,358 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Let's feature engineer a column that contains the number of medals an athlete has won.  Some athletes may have won more than one medal, and this may be a good indicator of nationality."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['medal_or_nm'] =  df['gold'] + df['silver'] + df['bronze']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1704, 11)"
+       "(1753, 12)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[(df.gold == 1) | (df.silver == 1) | (df.bronze == 1)].shape"
+    "df_medals = df[df.medal_or_nm >= 1]\n",
+    "df_medals.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>nationality</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>dob</th>\n",
+       "      <th>height</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>sport</th>\n",
+       "      <th>gold</th>\n",
+       "      <th>silver</th>\n",
+       "      <th>bronze</th>\n",
+       "      <th>medal_or_nm</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>435962603</td>\n",
+       "      <td>Aaron Brown</td>\n",
+       "      <td>CAN</td>\n",
+       "      <td>male</td>\n",
+       "      <td>5/27/92</td>\n",
+       "      <td>1.98</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>athletics</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>266237702</td>\n",
+       "      <td>Aaron Russell</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>male</td>\n",
+       "      <td>6/4/93</td>\n",
+       "      <td>2.05</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>volleyball</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>162792594</td>\n",
+       "      <td>Abbey Weitzeil</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>female</td>\n",
+       "      <td>12/3/96</td>\n",
+       "      <td>1.78</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>aquatics</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>962468808</td>\n",
+       "      <td>Abdoulrazak Issoufou Alfaga</td>\n",
+       "      <td>NIG</td>\n",
+       "      <td>male</td>\n",
+       "      <td>12/26/94</td>\n",
+       "      <td>2.07</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>taekwondo</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55</th>\n",
+       "      <td>969824503</td>\n",
+       "      <td>Abdullah Alrashidi</td>\n",
+       "      <td>IOA</td>\n",
+       "      <td>male</td>\n",
+       "      <td>8/21/63</td>\n",
+       "      <td>1.83</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>shooting</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           id                         name nationality     sex       dob  \\\n",
+       "2   435962603                  Aaron Brown         CAN    male   5/27/92   \n",
+       "6   266237702                Aaron Russell         USA    male    6/4/93   \n",
+       "14  162792594               Abbey Weitzeil         USA  female   12/3/96   \n",
+       "48  962468808  Abdoulrazak Issoufou Alfaga         NIG    male  12/26/94   \n",
+       "55  969824503           Abdullah Alrashidi         IOA    male   8/21/63   \n",
+       "\n",
+       "    height  weight       sport  gold  silver  bronze  medal_or_nm  \n",
+       "2     1.98    79.0   athletics     0       0       1            1  \n",
+       "6     2.05    98.0  volleyball     0       0       1            1  \n",
+       "14    1.78    68.0    aquatics     1       1       0            2  \n",
+       "48    2.07    98.0   taekwondo     0       1       0            1  \n",
+       "55    1.83    84.0    shooting     0       0       1            1  "
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_medals.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "nationality\n",
+       "ALG      1\n",
+       "ARG     22\n",
+       "ARM      4\n",
+       "AUS     71\n",
+       "AUT      2\n",
+       "AZE     16\n",
+       "BAH      3\n",
+       "BDI      1\n",
+       "BEL     21\n",
+       "BLR     12\n",
+       "BRA     48\n",
+       "BRN      2\n",
+       "BUL      7\n",
+       "CAN     62\n",
+       "CHN     96\n",
+       "CIV      1\n",
+       "COL      6\n",
+       "CRO     23\n",
+       "CUB      5\n",
+       "CZE     14\n",
+       "DEN     39\n",
+       "DOM      1\n",
+       "EGY      3\n",
+       "ESP     43\n",
+       "EST      4\n",
+       "ETH      7\n",
+       "FIJ     13\n",
+       "FRA     86\n",
+       "GBR    126\n",
+       "GEO      7\n",
+       "      ... \n",
+       "NED     45\n",
+       "NIG      1\n",
+       "NZL     35\n",
+       "PHI      1\n",
+       "POL     16\n",
+       "POR      1\n",
+       "PRK      7\n",
+       "PUR      1\n",
+       "QAT      1\n",
+       "ROU     17\n",
+       "RSA     21\n",
+       "RUS     96\n",
+       "SIN      1\n",
+       "SLO      4\n",
+       "SRB     53\n",
+       "SUI     11\n",
+       "SVK      8\n",
+       "SWE     26\n",
+       "THA      6\n",
+       "TJK      1\n",
+       "TPE      5\n",
+       "TTO      1\n",
+       "TUN      3\n",
+       "TUR      8\n",
+       "UAE      1\n",
+       "UKR     13\n",
+       "USA    205\n",
+       "UZB      6\n",
+       "VEN      2\n",
+       "VIE      1\n",
+       "Name: medal_or_nm, Length: 82, dtype: int64"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_medals.groupby('nationality')['medal_or_nm'].count()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### This is good to see.  Looking at athletes that do have a medal still leaves us at 1,704 observations. "
+    "### This is good to see.  Looking at athletes that do have a medal still leaves us at 1,753 observations. \n",
+    "\n",
+    "### A thought: In order to classify, we will take only countries that have a minimum medal count.  We'll say 15 for now.  Let's see how many countries that leaves us."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "nationality\n",
+       "ARG     22\n",
+       "ARM      4\n",
+       "AUS     78\n",
+       "AUT      2\n",
+       "AZE     16\n",
+       "BAH      3\n",
+       "BDI      1\n",
+       "BEL     21\n",
+       "BLR     12\n",
+       "BRA     50\n",
+       "BRN      2\n",
+       "BUL      7\n",
+       "CAN     65\n",
+       "CHN     97\n",
+       "CIV      1\n",
+       "COL      6\n",
+       "CRO     23\n",
+       "CUB      5\n",
+       "CZE     15\n",
+       "DEN     39\n",
+       "DOM      1\n",
+       "EGY      3\n",
+       "ESP     45\n",
+       "EST      4\n",
+       "ETH      8\n",
+       "FIJ     13\n",
+       "FRA     87\n",
+       "GBR    126\n",
+       "GEO      7\n",
+       "GER    149\n",
+       "      ... \n",
+       "NED     46\n",
+       "NIG      1\n",
+       "NZL     36\n",
+       "PHI      1\n",
+       "POL     16\n",
+       "POR      1\n",
+       "PRK      7\n",
+       "PUR      1\n",
+       "QAT      1\n",
+       "ROU     17\n",
+       "RSA     20\n",
+       "RUS     99\n",
+       "SIN      1\n",
+       "SLO      4\n",
+       "SRB     53\n",
+       "SUI     11\n",
+       "SVK      8\n",
+       "SWE     28\n",
+       "THA      6\n",
+       "TJK      1\n",
+       "TPE      5\n",
+       "TTO      1\n",
+       "TUN      3\n",
+       "TUR      8\n",
+       "UAE      1\n",
+       "UKR     15\n",
+       "USA    235\n",
+       "UZB      6\n",
+       "VEN      2\n",
+       "VIE      2\n",
+       "Name: medal_or_nm, Length: 81, dtype: int64"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_medals.groupby('nationality')['medal_or_nm'].agg('sum')"
    ]
   },
   {
@@ -352,7 +649,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train, test = train_test_split(df_medals, test_size=.3, random_state=123, stratify=df_medals[['nationality']])"
+   ]
   },
   {
    "cell_type": "code",
