Reduce to 11 countries

--- a/rio_olympics_medalists.ipynb
+++ b/rio_olympics_medalists.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
        "(10858, 11)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
        "(1753, 12)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
        "55    1.83    84.0    shooting     0       0       1            1  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
        "Name: medal_or_nm, Length: 82, dtype: int64"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,94 +559,326 @@
    "source": [
     "### This is good to see.  Looking at athletes that do have a medal still leaves us at 1,753 observations. \n",
     "\n",
-    "### A thought: In order to classify, we will take only countries that have a minimum medal count.  We'll say 15 for now.  Let's see how many countries that leaves us."
+    "### A thought: In order to classify, we will take only countries that have a minimum medal count.  We'll say 50 for now.  Let's see how many countries that leaves us."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "country_count = pd.DataFrame(df_medals.groupby('nationality')['medal_or_nm'].agg('sum'))\n",
+    "country_count.columns = ['country_count']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_medals = df_medals.merge(country_count, on='nationality')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>nationality</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>dob</th>\n",
+       "      <th>height</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>sport</th>\n",
+       "      <th>gold</th>\n",
+       "      <th>silver</th>\n",
+       "      <th>bronze</th>\n",
+       "      <th>medal_or_nm</th>\n",
+       "      <th>country_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>435962603</td>\n",
+       "      <td>Aaron Brown</td>\n",
+       "      <td>CAN</td>\n",
+       "      <td>male</td>\n",
+       "      <td>5/27/92</td>\n",
+       "      <td>1.98</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>athletics</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>769580282</td>\n",
+       "      <td>Akeem Haynes</td>\n",
+       "      <td>CAN</td>\n",
+       "      <td>male</td>\n",
+       "      <td>3/11/92</td>\n",
+       "      <td>1.68</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>athletics</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>373002185</td>\n",
+       "      <td>Allison Beveridge</td>\n",
+       "      <td>CAN</td>\n",
+       "      <td>female</td>\n",
+       "      <td>6/1/93</td>\n",
+       "      <td>1.69</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>cycling</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>686662012</td>\n",
+       "      <td>Allysha Chapman</td>\n",
+       "      <td>CAN</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1/25/89</td>\n",
+       "      <td>1.60</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>football</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>857846421</td>\n",
+       "      <td>Andre de Grasse</td>\n",
+       "      <td>CAN</td>\n",
+       "      <td>male</td>\n",
+       "      <td>11/10/94</td>\n",
+       "      <td>1.76</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>athletics</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>790221508</td>\n",
+       "      <td>Ashley Lawrence</td>\n",
+       "      <td>CAN</td>\n",
+       "      <td>female</td>\n",
+       "      <td>6/11/95</td>\n",
+       "      <td>1.64</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>football</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>405218283</td>\n",
+       "      <td>Ashley Steacy</td>\n",
+       "      <td>CAN</td>\n",
+       "      <td>female</td>\n",
+       "      <td>6/28/87</td>\n",
+       "      <td>1.58</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>rugby sevens</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>644567979</td>\n",
+       "      <td>Bianca Farella</td>\n",
+       "      <td>CAN</td>\n",
+       "      <td>female</td>\n",
+       "      <td>4/10/92</td>\n",
+       "      <td>1.73</td>\n",
+       "      <td>73.0</td>\n",
+       "      <td>rugby sevens</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>321655820</td>\n",
+       "      <td>Brendon Rodney</td>\n",
+       "      <td>CAN</td>\n",
+       "      <td>male</td>\n",
+       "      <td>4/9/92</td>\n",
+       "      <td>1.95</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>athletics</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>542571086</td>\n",
+       "      <td>Brianne Theisen Eaton</td>\n",
+       "      <td>CAN</td>\n",
+       "      <td>female</td>\n",
+       "      <td>12/18/88</td>\n",
+       "      <td>1.75</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>athletics</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "nationality\n",
-       "ARG     22\n",
-       "ARM      4\n",
-       "AUS     78\n",
-       "AUT      2\n",
-       "AZE     16\n",
-       "BAH      3\n",
-       "BDI      1\n",
-       "BEL     21\n",
-       "BLR     12\n",
-       "BRA     50\n",
-       "BRN      2\n",
-       "BUL      7\n",
-       "CAN     65\n",
-       "CHN     97\n",
-       "CIV      1\n",
-       "COL      6\n",
-       "CRO     23\n",
-       "CUB      5\n",
-       "CZE     15\n",
-       "DEN     39\n",
-       "DOM      1\n",
-       "EGY      3\n",
-       "ESP     45\n",
-       "EST      4\n",
-       "ETH      8\n",
-       "FIJ     13\n",
-       "FRA     87\n",
-       "GBR    126\n",
-       "GEO      7\n",
-       "GER    149\n",
-       "      ... \n",
-       "NED     46\n",
-       "NIG      1\n",
-       "NZL     36\n",
-       "PHI      1\n",
-       "POL     16\n",
-       "POR      1\n",
-       "PRK      7\n",
-       "PUR      1\n",
-       "QAT      1\n",
-       "ROU     17\n",
-       "RSA     20\n",
-       "RUS     99\n",
-       "SIN      1\n",
-       "SLO      4\n",
-       "SRB     53\n",
-       "SUI     11\n",
-       "SVK      8\n",
-       "SWE     28\n",
-       "THA      6\n",
-       "TJK      1\n",
-       "TPE      5\n",
-       "TTO      1\n",
-       "TUN      3\n",
-       "TUR      8\n",
-       "UAE      1\n",
-       "UKR     15\n",
-       "USA    235\n",
-       "UZB      6\n",
-       "VEN      2\n",
-       "VIE      2\n",
-       "Name: medal_or_nm, Length: 81, dtype: int64"
+       "          id                   name nationality     sex       dob  height  \\\n",
+       "0  435962603            Aaron Brown         CAN    male   5/27/92    1.98   \n",
+       "1  769580282           Akeem Haynes         CAN    male   3/11/92    1.68   \n",
+       "2  373002185      Allison Beveridge         CAN  female    6/1/93    1.69   \n",
+       "3  686662012        Allysha Chapman         CAN  female   1/25/89    1.60   \n",
+       "4  857846421        Andre de Grasse         CAN    male  11/10/94    1.76   \n",
+       "5  790221508        Ashley Lawrence         CAN  female   6/11/95    1.64   \n",
+       "6  405218283          Ashley Steacy         CAN  female   6/28/87    1.58   \n",
+       "7  644567979         Bianca Farella         CAN  female   4/10/92    1.73   \n",
+       "8  321655820         Brendon Rodney         CAN    male    4/9/92    1.95   \n",
+       "9  542571086  Brianne Theisen Eaton         CAN  female  12/18/88    1.75   \n",
+       "\n",
+       "   weight         sport  gold  silver  bronze  medal_or_nm  country_count  \n",
+       "0    79.0     athletics     0       0       1            1             69  \n",
+       "1    71.0     athletics     0       0       1            1             69  \n",
+       "2    62.0       cycling     0       0       1            1             69  \n",
+       "3    58.0      football     0       0       1            1             69  \n",
+       "4    70.0     athletics     0       1       2            3             69  \n",
+       "5    60.0      football     0       0       1            1             69  \n",
+       "6    64.0  rugby sevens     0       0       1            1             69  \n",
+       "7    73.0  rugby sevens     0       0       1            1             69  \n",
+       "8    80.0     athletics     0       0       1            1             69  \n",
+       "9    64.0     athletics     0       0       1            1             69  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_medals.groupby('nationality')['medal_or_nm'].agg('sum')"
+    "df_medals.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_medals = df_medals[df_medals.country_count > 50]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1072, 13)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_medals.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_medals.nationality.nunique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
