--- a/rio_olympics_medalists.ipynb
+++ b/rio_olympics_medalists.ipynb
@@ -874,7 +874,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### We now have 11 countries to classify our athletes as their nationality.  Let's split and then explore our train."
+   ]
   },
   {
    "cell_type": "code",
