DOB to datetime, update to do

--- a/top_nation_medalist_explore.ipynb
+++ b/top_nation_medalist_explore.ipynb
@@ -2,15 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
     "import nationality_helpers\n",
-    "from nationality_helpers import create_top_medalist"
+    "from nationality_helpers import create_top_medalist\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import classification_report\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn import preprocessing\n",
+    "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
+    "from sklearn import tree\n",
+    "\n",
+    "import seaborn as sns\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -48,7 +65,7 @@
    "source": [
     "### To do:\n",
     "\n",
-    "### Encode nationality, sex, sport.  DOB to datetime.  Split into male/female.  Then split athletics vs not athletics.  Athletics contains all of track.  This is a large range from distance runners to shot put throwers."
+    "### Encode nationality, sex, sport.  Split into male/female.  Then split athletics vs not athletics.  Athletics contains all of track.  This is a large range from distance runners to shot put throwers.  Create age column."
    ]
   },
   {
@@ -452,10 +469,221 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.dob = pd.to_datetime(df.dob)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>nationality</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>dob</th>\n",
+       "      <th>height</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>sport</th>\n",
+       "      <th>gold</th>\n",
+       "      <th>silver</th>\n",
+       "      <th>bronze</th>\n",
+       "      <th>medal_or_nm</th>\n",
+       "      <th>country_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>435962603</td>\n",
+       "      <td>Aaron Brown</td>\n",
+       "      <td>CAN</td>\n",
+       "      <td>male</td>\n",
+       "      <td>1992-05-27</td>\n",
+       "      <td>1.98</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>athletics</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>769580282</td>\n",
+       "      <td>Akeem Haynes</td>\n",
+       "      <td>CAN</td>\n",
+       "      <td>male</td>\n",
+       "      <td>1992-03-11</td>\n",
+       "      <td>1.68</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>athletics</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>373002185</td>\n",
+       "      <td>Allison Beveridge</td>\n",
+       "      <td>CAN</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1993-06-01</td>\n",
+       "      <td>1.69</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>cycling</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>686662012</td>\n",
+       "      <td>Allysha Chapman</td>\n",
+       "      <td>CAN</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1989-01-25</td>\n",
+       "      <td>1.60</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>football</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>857846421</td>\n",
+       "      <td>Andre de Grasse</td>\n",
+       "      <td>CAN</td>\n",
+       "      <td>male</td>\n",
+       "      <td>1994-11-10</td>\n",
+       "      <td>1.76</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>athletics</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          id               name nationality     sex        dob  height  \\\n",
+       "0  435962603        Aaron Brown         CAN    male 1992-05-27    1.98   \n",
+       "1  769580282       Akeem Haynes         CAN    male 1992-03-11    1.68   \n",
+       "2  373002185  Allison Beveridge         CAN  female 1993-06-01    1.69   \n",
+       "3  686662012    Allysha Chapman         CAN  female 1989-01-25    1.60   \n",
+       "4  857846421    Andre de Grasse         CAN    male 1994-11-10    1.76   \n",
+       "\n",
+       "   weight      sport  gold  silver  bronze  medal_or_nm  country_count  \n",
+       "0    79.0  athletics     0       0       1            1             69  \n",
+       "1    71.0  athletics     0       0       1            1             69  \n",
+       "2    62.0    cycling     0       0       1            1             69  \n",
+       "3    58.0   football     0       0       1            1             69  \n",
+       "4    70.0  athletics     0       1       2            3             69  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train, test = train_test_split(df, test_size=.3, random_state=123, stratify=df[['e_or_p']])"
+   ]
   },
   {
    "cell_type": "code",
